Fix alignment issue with fractional screen resolutions.

--- a/app/style.css
+++ b/app/style.css
@@ -167,7 +167,7 @@ svg {
 	font-size: 12px;
 	color: #333;
 	line-height: normal;
-	width: 189px;
+	width: 190px;
 	height: 170px;
 	padding: 15px 10px 15px 10px;
 }
@@ -218,7 +218,7 @@ svg {
 	position: relative;
 	top: 0px;
 	left: 2px;
-	width: 189px;
+	width: 190px;
 	height: 138px;
 	overflow: hidden;
 }
